continuação do projeto alterando somente a página cheesecake.

--- a/recipes/cheescake-red-velvet.html
+++ b/recipes/cheescake-red-velvet.html
@@ -8,5 +8,35 @@
 <body>
     <h1>Red Velvet Cheesecake Brownies</h1>
     <a href="../index.html">Home</a>    
+    <!--Image-->
+    <img src="../images/cheesecake.jpg" alt="cheesecake" width="410px" height="410px">
+    <!--Description-->
+    <p>These beautiful red velvet cheesecake brownies are moist and delicious with a swirl of decadent cheesecake batter! Perfect for red velvet cake lovers; adds a different twist to the traditional cake. A great dessert for Valentine's Day and can be made ahead.</p>        
+    <!--Ingredients ul-->
+    <h2>Ingredients</h2>
+    <ul>
+        <li><strong>Sugar:</strong> These red velvet cheesecake brownies start with a cup of white sugar. You'll need more white sugar for the cream cheese filling.</li>
+    <li><strong>Butter:</strong> Beat a stick of melted butter with the first cup of sugar.</li>
+    <li><strong>Cocoa powder:</strong> Unsweetened cocoa powder gives the brownies their chocolatey flavor.</li>
+    <li><strong>Food coloring:</strong> You can omit the red food coloring if you like, but your brownies won't have the signature red velvet hue.</li>
+    <li><strong>Vanilla:</strong> Vanilla extract enhances the flavors of both the brownies and the filling.</li>
+    <li><strong>Vinegar:</strong>White vinegar adds a hint of acidity</li>
+    <li><strong>Salt:</strong>A pinch of salt enhances the overall flavor of the red velvet brownies.</li>
+    <li><strong>Eggs:</strong>You'll need two eggd for the brownies and one egg for the filling.</li>
+    <li><strong>Flour:</strong>All-purpose flour gives the brownies structure</li>
+    <li><strong>Cream cheese:</strong>A cream cheese filling takes the decadent red velvet brownies over the top.</li>
+    </ul>
+    <!--Steps ol-->
+    <h2>Steps</h2>
+    <ol>
+    <li>Make the brownie batter according to the recipe</li>
+    <li>set aside 1/4 cup of batter, then pour the rest of th batter into a prepared baking dish.</li>
+    <li>Make the cream cheese filling according to the recipe.</li>
+    <li>Dollop the filling over the batter. Drizzle the reserved batter over the dollops.</li>
+    <li>Drag a knife or skewer through the batter and filling to create swirls.</li>
+    <li>Bake the brownies, cool, an cut into pieces.</li>
+    </ol>
+
+
 </body>
 </html>
