Terminei de editar as receitas em html, coloquei a pasta imagens dentro da pasta de receitas

--- a/recipes/cake-red-velvet.html
+++ b/recipes/cake-red-velvet.html
@@ -11,7 +11,7 @@
     <a href="../index.html">Home</a>
     </div>
     <!--Foto-->
-    <img src="../images/cake1.jpg" alt="cake red Velvet" height="410" width="410">
+    <img src="images/cake1.jpg" alt="cake red Velvet" height="410" width="410">
     <!--Descrição-->
     <p>This red velvet cake recipe is a family favorite.</p>
     <!--Ingredientes ul-->
@@ -37,7 +37,7 @@
         <li>1 cup butter</li>
         <li>1 teaspoon vanilla extract</li>
     </ul>
-    <h2>Directions</h2>
+    <h2>Steps</h2>
     <ol>
     <li>
     <p>Preheat the oven to 350 degrees F (175 degrees C). Grease two 9-inch round pans.</p>
