--- a/recipes/cheescake-red-velvet.html
+++ b/recipes/cheescake-red-velvet.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Red Velvet Cheesecake Brownies</h1>
-    <a href="../index.html">Home</a>    
+    <div><a href="../index.html">Home</a></div>    
     <!--Image-->
-    <img src="../images/cheesecake.jpg" alt="cheesecake" width="410px" height="410px">
+    <img src="images/cheesecake.jpg" alt="cheesecake" height="410" width="410">
     <!--Description-->
     <p>These beautiful red velvet cheesecake brownies are moist and delicious with a swirl of decadent cheesecake batter! Perfect for red velvet cake lovers; adds a different twist to the traditional cake. A great dessert for Valentine's Day and can be made ahead.</p>        
     <!--Ingredients ul-->
