--- a/recipes/peanut-butter-pie.html
+++ b/recipes/peanut-butter-pie.html
@@ -7,6 +7,29 @@
 </head>
 <body>
    <h1>Peanut Butter Pie</h1> 
-   <a href="../index.html">Home</a>
+   <div><a href="../index.html">Home</a></div>
+   <!--Image 410-->
+   <img src="images/peanut.jpg" alt="peanut butter pie" height="410" width="410">
+   <!--Description-->
+   <p>This peanut butter pie recipe is very easy to make. Garnish with peanut butter cups for an extra special treat!</p>
+   <!--Ingredients-->
+   <h2>Ingredients</h2>
+   <ul>
+       <li><strong>Cream cheese:</strong> This rich and creamy peanut butter pie starts with a package of cream cheese.</li>
+       <li><strong>Peanut butter:</strong> Of course, you'll need peanut butter! Opt for the smooth kind.</li>
+    <li><strong>Confectioners' sugar:</strong> Make sure you use confectioners' (a.k.a. powdered) sugar, as it'll blend smoothly into the filling.</li>
+        <li><strong>Frozen whipped topping:</strong> A container of frozen whipped topping (such as Cool Whip) is another shortcut ingredient.</li>
+        <li><strong>Graham cracker crust:</strong> Use a store-bought or homemade graham cracker crust.</li>
+        <li><strong>Peanut butter cups:</strong> Garnish the pie with peanut butter cup candies, such as Reese's.</li>
+   </ul>
+   <!--Steps-->
+   <h2>Steps</h2>
+   <ol>
+        <li>Mix together the first three ingredients until smooth.</li>
+        <li>Fold in half of the whipped topping, then pour the mixture into the crust.</li>
+        <li>Top with the remaining whipped topping and garnish with peanut butter cups.</li>
+        <li>Chill for at least two hours before serving.</li>
+   </ol>
+    
 </body>
 </html>
