--- a/recipes/stick-butter-mac-cheese.html
+++ b/recipes/stick-butter-mac-cheese.html
@@ -7,7 +7,36 @@
 </head>
 <body>
     <h1>Stick of Butter Mac and Cheese</h1>
-    <a href="../index.html">Home</a>
-    
+    <div><a href="../index.html">Home</a></div>
+    <!--Image-->
+    <img src="images/stick.jpg" alt="stick of butter mac and cheese" height="410" width="410">
+    <!--Description-->
+    <p>This stick of butter mac and cheese is cozy comfort food, and cleanup is minimal. The macaroni bakes in the cheese sauce, without boiling first, and the dish is finished under the broiler for a crispy top.</p>
+    <!--Ingredients-->
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 stick unsalted butter, divided</li>
+        <li>1/4 cup all-purpose flour</li>
+        <li>3 cups high protein 2% milk or regular 2% milk, warmed</li>
+        <li>2 1/4 cups sharp Cheddar cheese</li>
+        <li>1/2 teaspoon Worcestershire sauce</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/4 teaspoon freshly ground black pepper</li>
+        <li>1/2 teaspoon dry mustard powder</li>
+        <li>12 ounces high protein pasta</li>
+        <li>3/4 cup panko breadcrumbs</li>
+
+    </ul>
+    <!--Steps-->
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients Preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>Melt 5 tablespoons butter in a large saucepan over medium heat. Whisk in flour and cook for 1 to 2 minutes, stirring constantly, to form a smooth roux. Gradually whisk in warmed milk. Cook, stirring, until slightly thickened, 4 to 5 minutes.</li>
+        <li>Reduce heat to low. Add 2 cups Cheddar cheese, stirring until melted and smooth. Stir in Worcestershire, salt, pepper, and mustard powder. Taste and adjust seasoning. </li>
+        <li>Place dry macaroni in a 9x13-inch baking dish. Pour cheese sauce over, stirring to coat evenly. Cover tightly with foil.</li>
+        <li>Bake until macaroni is tender, 35 to 45 minutes, stirring halfway through cooking time to ensure even cooking. Remove foil for the last 5 minutes. </li>
+        <li>Melt remaining 3 tablespoons butter in a microwave-safe bowl. Add panko and stir to combine. Sprinkle panko topping evenly over baked macaroni; sprinkle with remaining Cheddar cheese.</li>
+        <li>Turn on the oven’s broiler. Broil until topping is crispy and golden, 1 to 2 minutes. Let rest for 5 minutes before serving.</li>
+    </ol>
 </body>
 </html>
